--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
@@ -24,11 +24,61 @@
         </nav>
         <div class="banner">
             <div class="banner-content"><h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore more</button></div>
             <img src="images/banner.png" alt="">
         </div>
     </header>
+
+    <main>
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="Quick-list text-light-grey">quick list</span><span> of Our</span> <span class="teams-features">Features</span></h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
+
+        <section class="features">
+
+
+        </section>
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-status">54</h2>
+                    <p class="card-title">award wining</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-status">590</h2>
+                    <p class="card-title">clients worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-status">22578</h2>
+                    <p class="card-title">email send</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-status">1456</h2>
+                    <p class="card-title">projects finished</p>
+                </div>
+
+            </div>
+        </section>
+    </main>
     
 
 
